# RagKit-vs

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
benchmarks/: run_benchmark.py
docs/: api.md  architecture.md  developer_guide.md  quickstart.md  release_checklist.md
examples/: basic.py  evaluate.py  folder.py  groq.py  ma_rag.py  offline_demo.py  openai.py  pdf.py  quickstart.py  rag_with_pdf.py  save_load.py  test_my_pdf.py  traditional.py
examples/data/: qa_dataset.json
examples/data/docs/: embeddings.txt  multi_agent_rag.txt  rag.txt
results/: .gitkeep
src/ragkit/: __init__.py  cli.py  exceptions.py  facade.py
src/ragkit/chunkers/: __init__.py  passage.py
src/ragkit/core/: __init__.py  config.py  interfaces.py  registry.py  types.py
src/ragkit/corpus/: __init__.py  loaders.py
src/ragkit/embedders/: __init__.py  hashing.py  sentence_transformer.py
src/ragkit/evaluation/: __init__.py  judge.py  runner.py
src/ragkit/evaluation/metrics/: __init__.py  generation.py  retrieval.py
src/ragkit/llms/: __init__.py  mock.py  provider_manager.py  providers.py
src/ragkit/pipelines/: __init__.py  base.py  traditional.py
src/ragkit/pipelines/ma_rag/: __init__.py  agents.py  graph.py  pipeline.py  state.py
src/ragkit/prompts/: __init__.py  builder.py  templates.py
src/ragkit/retrievers/: __init__.py  dense.py
src/ragkit/stores/: __init__.py  faiss_store.py
src/ragkit/utils/: __init__.py  logger.py
tests/: test_core.py  test_corpus_chunker.py  test_exceptions.py  test_llm_providers.py  test_metrics.py  test_pipelines.py  test_retrieval_quality.py  test_save_load.py  test_store_retriever.py
